# dlp-native

./: .gitignore  .gitmodules  Cargo.toml  README.md  VENDOR.md
.cargo/: config.toml
.github/workflows/: build.yml
crates/deno_ast_patch/: .cargo_vcs_info.json  Cargo.toml
crates/unity_dlp_cli/: Cargo.toml
crates/unity_dlp_cli/src/: main.rs
crates/unity_dlp_core/: Cargo.toml  build.rs
crates/unity_dlp_core/src/: ffi.rs  jsc_provider.rs  lib.rs  python_host.rs
python/unity_dlp_jsc/unity_dlp_jsc/: __init__.py
scripts/: build-android.sh  build-host.sh  build-ios.sh  fetch-artifacts.ps1  fetch-artifacts.sh
unity_package/: link.xml  package.json
unity_package/Editor/: DlpBuildPreprocessor.cs  YtDlp.Editor.asmdef  YtDlpSmokeTest.cs
unity_package/Runtime/: DlpBootstrap.cs  VideoInfo.cs  YtDlp.Runtime.asmdef  YtDlp.cs
unity_package/Samples~/PlayerTest/: DlpPlayerTest.cs
