[package]
name = "unity_dlp_cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "unity_dlp_cli"
path = "src/main.rs"

[features]
default = ["js-v8"]
js-v8 = ["unity_dlp_core/js-v8"]
js-quickjs = ["unity_dlp_core/js-quickjs"]

[dependencies]
unity_dlp_core = { path = "../unity_dlp_core", default-features = false }
serde_json.workspace = true
